# feminos-daq

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  cleanSharedMemory.c  loadDAQ_EnvVars.sh  mclient  ped  run.info  selftrig
.github/workflows/: cmake.yml  viewer.yml
cmake/: uninstall.cmake
configs/: cast_aget_run.txt  mproto_aget_pedrun.txt  mproto_aget_run.txt  mproto_aget_startup.txt  ped  ped.info  run.info  selftrig  start
examples/: automated_acquisition.py  signals.ipynb  viewer.py
other/: run.info
projects/: .gitignore  cast_aget_run.txt  mproto_aget_pedrun.txt  mproto_aget_startup.txt
projects/minos/: CMakeLists.txt  tags
projects/minos/axirbf/: axi_data_server.c
projects/minos/axirbf/microblaze/: axi_rbf.c  axi_rbf.h
projects/minos/bootloader/: blconfig.h  bootloader.c  bootloader.ld  errors.h  platform.c  platform_config.h  portab.h  srec.c  srec.h
projects/minos/bufmgr/: bufpool.c  bufpool.h
projects/minos/cmdi/: cmdi.c  cmdi.h  cmdi_after.c  cmdi_after.h  cmdi_aget.c  cmdi_aget.h  cmdi_flash.c  cmdi_flash.h  cmdi_strings.h  hitscurve.c  hitscurve.h  pedestal.c  pedestal.h
projects/minos/common/: error_codes.h
projects/minos/feminos/: after.c  after.h  after_strings.h  aget.c  aget.h  aget_strings.h  blendasic.h  busymeter.c  busymeter.h  ds2438.c  ds2438.h  ds2438_api.h  ds2438_ps.c  ds2438_ps.h  feminos.c  feminos.h  frame.c  frame.h  hit_histo.c  hit_histo.h  interrupt.c  interrupt.h  pulser.c  pulser.h
projects/minos/mars/: MarsI2C.c  MarsI2C.h  cmdi_i2c.c  cmdi_i2c.h  i2c.c  i2c.h
projects/minos/mclient/: cmdfetcher.c  cmdfetcher.h  evbuilder.c  evbuilder.h  evbuilder.h~  femarray.c  femarray.h  femproxy.c  femproxy.h  mclientUDP.c  mreader.c  programflash.c  programflash.h
projects/minos/mclient/linux/: makefile
projects/minos/mclient/winnt/: mclient.dsp  mclient.dsw  mclient.plg  mclient.sln  mclient.vcxproj  mclient.vcxproj.filters  mreader.dsp  mreader.plg  mreader.vcxproj  mreader.vcxproj.filters
projects/minos/network/: basic_ip.c  basic_ip.h  data_server.c  echo_server.c  ethernet.h  ethernet_arp.c  ethernet_icmp.c  ethernet_tcp.c  ethernet_udp.c  socket.c  socket.h  socket_ui.h
projects/minos/network/microblaze/: ethernet_axidma.c  ethernet_axidma.h  ethernet_common.c  ethernet_ps.h  ksz9021.c  ksz9021.h  sockudp_axififo.c
projects/minos/spiflash/: hexreader.c  hexreader.h  minibios.c  minibios.h  minibios_feminos.c  minibios_tcm.c  spiflash.c  spiflash.h  spiflash_polled.c  spiflash_polled.h  w25q128bv.h
projects/minos/tcm/: lmk03200.c  lmk03200.h  periodmeter.c  periodmeter.h  tcm.c  tcm.h  tcm_cmdi.c  tcm_cmdi.h  tcmserver.c
projects/minos/util/: histo.c  histo.h  histo_int.c  histo_int.h  randgen.c  randgen.h  timerlib.h
projects/minos/util/microblaze/: finetime.c  finetime.h  read.c  read.h
projects/minos/util/winnt/: sock_util.c  sock_util.h  timerlib.c  util.dsp  util.opt  util.plg  util.sln  util.vcxproj  util.vcxproj.filters
scripts/: feminos-daq-sync.sh  rest_raw_to_feminos_daq.C
src/: main.cpp
src/bufmgr/: bufpool.cpp  bufpool.h
src/feminos/: frame.h
src/mclient/: cmdfetcher.cpp  cmdfetcher.h  evbuilder.cpp  evbuilder.h  femarray.cpp  femarray.h  femproxy.cpp  programflash.h
src/minos/: main.cpp
src/minos/axirbf/: axi_data_server.c  axi_data_server.cpp
src/minos/axirbf/microblaze/: axi_rbf.c  axi_rbf.h
src/minos/bootloader/: blconfig.h  bootloader.cpp  bootloader.ld  errors.h  platform.cpp  platform_config.h  portab.h  srec.cpp  srec.h
src/minos/bufmgr/: bufpool.cpp  bufpool_err.h
src/minos/cmdi/: cmdi.cpp  cmdi.h  cmdi_after.cpp  cmdi_after.h  cmdi_aget.c  cmdi_aget.cpp  cmdi_aget.h  cmdi_flash.cpp  cmdi_flash.h  cmdi_strings.h  hitscurve.cpp  hitscurve.h  pedestal.cpp  pedestal.h
src/minos/common/: error_codes.h
src/minos/feminos/: after.cpp  after.h  after_strings.h  aget.cpp  aget.h  aget_strings.h  blendasic.h  busymeter.cpp  busymeter.h  ds2438.c  ds2438.h  ds2438_api.h  ds2438_ps.cpp  ds2438_ps.h  feminos.c  feminos.cpp  feminos.h  frame.c  frame.cpp  frame.h  hit_histo.c  hit_histo.h  interrupt.cpp  interrupt.h  pulser.c  pulser.cpp  pulser.h
src/minos/mars/: MarsI2C.cpp  MarsI2C.h  cmdi_i2c.cpp  cmdi_i2c.h  i2c.c  i2c.cpp  i2c.h
src/minos/mclient/: cmdfetcher.c  cmdfetcher.cpp  cmdfetcher.h  evbuilder.cpp  evbuilder.h  femarray.cpp  femarray.h  femproxy.cpp  femproxy.h  mclientUDP.c  mreader.cpp  programflash.c  programflash.cpp
src/minos/mclient/linux/: makefile
src/minos/mclient/winnt/: mclient.dsp  mclient.dsw  mclient.ncb  mclient.opt  mclient.plg  mclient.sln  mclient.vcxproj  mclient.vcxproj.filters  mreader.dsp  mreader.plg  mreader.vcxproj  mreader.vcxproj.filters
src/minos/network/: basic_ip.cpp  basic_ip.h  data_server.c  data_server.cpp  echo_server.c  echo_server.cpp  ethernet.h  ethernet_arp.c  ethernet_arp.cpp  ethernet_icmp.cpp  ethernet_tcp.c  ethernet_tcp.cpp  ethernet_udp.c  ethernet_udp.cpp  socket.cpp  socket.h  socket_ui.h
src/minos/network/microblaze/: ethernet_axidma.c  ethernet_axidma.h  ethernet_common.c  ethernet_ps.h  ksz9021.c  ksz9021.h  sockudp_axififo.c
src/minos/prometheus/: prometheus.cpp  prometheus.h
src/minos/root/: graph.cpp  graph.h  storage.cpp  storage.h
src/minos/spiflash/: hexreader.cpp  hexreader.h  minibios.cpp  minibios.h  minibios_feminos.c  minibios_tcm.cpp  spiflash.c  spiflash.cpp  spiflash.h  spiflash_polled.c  spiflash_polled.h  w25q128bv.h
src/minos/tcm/: lmk03200.c  lmk03200.cpp  lmk03200.h  periodmeter.cpp  periodmeter.h  tcm.c  tcm.cpp  tcm.h  tcm_cmdi.cpp  tcm_cmdi.h  tcmserver.cpp
src/minos/util/: histo.c  histo.cpp  histo.h  histo_int.c  histo_int.cpp  histo_int.h  randgen.cpp  randgen.h  timerlib.h
src/minos/util/microblaze/: finetime.cpp  finetime.h  read.cpp  read.h
src/minos/util/winnt/: sock_util.c  sock_util.h  (+8 more)
src/prometheus/: prometheus.cpp  prometheus.h
src/root/: graph.cpp  storage.cpp  storage.h
src/util/: timerlib.h
src/util/linux/: sock_util.h
viewer/: feminos-viewer.py  requirements.txt  rest_signal_id_to_readout.C  viewer.py
